--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ def dbflow_version = "4.1.2"
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.user.invoicemanagement"
         minSdkVersion 15
