--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ kapt {
     generateStubs = true
 }
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:appcompat-v7:26.+'
@@ -70,7 +71,6 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7-kotlin:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.0.0'
 
-
     // For tests
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.+'
@@ -87,4 +87,5 @@ dependencies {
 }
 repositories {
     mavenCentral()
+    google()
 }
