--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,31 +32,25 @@ kapt {
 }
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
-
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
     // Rx
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-
-    // Recycler View with sections
+    // Recycler BaseView with sections
     compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.1.3'
-
     // Dagger
-//    compile 'com.google.dagger:dagger:2.12'
-//    kapt 'com.google.dagger:dagger-compiler:2.12'
-//    kaptAndroidTest "com.google.dagger:dagger-compiler:2.6.1"
-//    kapt 'com.google.dagger:dagger-android-processor:2.12'
-//    provided 'org.glassfish:javax.annotation:10.0-b28'
-
+    //    compile 'com.google.dagger:dagger:2.12'
+    //    kapt 'com.google.dagger:dagger-compiler:2.12'
+    //    kaptAndroidTest "com.google.dagger:dagger-compiler:2.6.1"
+    //    kapt 'com.google.dagger:dagger-android-processor:2.12'
+    //    provided 'org.glassfish:javax.annotation:10.0-b28'
     // DBFlow
     kapt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
@@ -64,13 +58,11 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-kotlinextensions:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-rx2:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-rx2-kotlinextensions:${dbflow_version}"
-
     // RxBinding
     compile 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7-kotlin:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.0.0'
-
     // For tests
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.+'
