--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.user.invoicemanagement"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 11
-        versionName "1.1.7"
+        versionCode 15
+        versionName "1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -75,7 +75,7 @@ dependencies {
 
     // For tests
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.+'
+    //testCompile 'org.mockito:mockito-core:2.+'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
